commit translated contents

--- a/learn-certs-pr/azure-data-scientist/index.yml
+++ b/learn-certs-pr/azure-data-scientist/index.yml
@@ -2,24 +2,32 @@
 title: 'Microsoft Certified: Azure Data Scientist Associate'
 metadata:
   title: 'Microsoft Certified: Azure Data Scientist Associate'
-  description: Azure Data Scientists wenden ihre Kenntnisse in Datenwissenschaften und maschinellem Lernen an, um Workloads für maschinelles Lernen in Azure zu implementieren und auszuführen, insbesondere mit Hilfe des Azure Machine Learning Service.
+  description: Azure Data Scientists wenden ihre Kenntnisse in Data Science und maschinellem Lernen an, um Workloads für maschinelles Lernen in Azure zu implementieren und auszuführen, insbesondere mithilfe des Azure Machine Learning Service.
+  ms.openlocfilehash: 49e2c00906fbae6d614c1714da8aec43d26debee
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078490"
 uid: certification.azure-data-scientist
 certificationRenewalUid: renewal.azure-data-scientist
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  Kandidaten für die Azure Data Scientist Associate-Zertifizierung sollten über Fachkenntnisse in der Anwendung von Datenwissenschaft und maschinellem Lernen verfügen, um Arbeiten mit maschinellem Lernen in Azure zu implementieren und auszuführen.
-  
-  Zu den Aufgaben dieser Rolle gehört die Planung und Erstellung einer geeigneten Arbeitsumgebung für datenwissenschaftliche Arbeiten in Azure. Sie führen Datenexperimente durch und trainieren Vorhersagemodelle. Darüber hinaus verwalten, optimieren und implementieren Sie Machine-Learning-Modelle in der Produktion.
-  
-  Ein Kandidat für diese Zertifizierung sollte über Kenntnisse und Erfahrungen in Data Science und der Verwendung von Azure Machine Learning und Azure Databricks verfügen.
-subTitle: Azure Data Scientists wenden ihre Kenntnisse in Datenwissenschaften und maschinellem Lernen an, um Workloads für maschinelles Lernen in Azure zu implementieren und auszuführen, insbesondere mit Hilfe des Azure Machine Learning Service.
+summary: >-
+  Kandidaten für die Zertifizierung „Azure Data Scientist Associate“ sollten über Fachwissen in der Anwendung von Data Science und maschinellem Lernen verfügen, um ML-Workloads in Azure zu implementieren und auszuführen.
+
+
+  Zu den Aufgaben dieser Rolle gehören die Planung und Erstellung einer geeigneten Arbeitsumgebung für Data Science-Workloads in Azure. Sie führen Datenexperimente durch und trainieren Vorhersagemodelle. Darüber hinaus verwalten, optimieren und implementieren Sie Modelle für maschinelles Lernen in der Produktion.
+
+
+  Ein Kandidat für diese Zertifizierung sollte über Kenntnisse und Erfahrung im Bereich Data Science und im Umgang mit Azure Machine Learning und Azure Databricks verfügen.
+subTitle: Azure Data Scientists wenden ihre Kenntnisse in Data Science und maschinellem Lernen an, um Workloads für maschinelles Lernen in Azure zu implementieren und auszuführen, insbesondere mithilfe des Azure Machine Learning Service.
 levels:
 - intermediate
 skills:
-- Verwaltung von Azure-Ressourcen für maschinelles Lernen
-- Experimente durchführen und Modelle trainieren
-- Bereitstellung und Operationalisierung von Lösungen für maschinelles Lernen
-- verantwortliches maschinelles Lernen implementieren
+- Manage Azure resources for machine learning
+- Run experiments and train models
+- Deploy and operationalize machine learning solutions
+- Implement responsible machine learning
 roles:
 - data-scientist
 type: role-based
@@ -61,7 +69,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
-
