--- a/learn-certs-pr/d365-business-central-functional-consultant-associate/index.yml
+++ b/learn-certs-pr/d365-business-central-functional-consultant-associate/index.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
+title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
-  description: Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
-  ms.openlocfilehash: 80be32c374b0cdcb3bee49ecdabd595bef1f831b
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
+  description: Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
+  ms.openlocfilehash: c5ecb5ef6fccc6cdb67a2645aa3d3f739db187c3
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132106922"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079128"
 uid: certification.d365-business-central-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
-  Wenn Sie als Functional Consultant zentrale Microsoft Dynamics 365 Business Central-Einrichtungsprozesse für kleine und mittelständische Unternehmen implementieren, ist diese Zertifizierung für Sie geeignet. Sie benötigen Erfahrung im Konfigurieren von Dynamics 365 Business Central-Rollencentern, einschließlich der Anpassung von Erkenntnissen, Hinweisen, Aktionskacheln, Berichten und Diagrammen. Außerdem sollten Sie Business Central mithilfe von Microsoft Power Platform-Komponenten erweitern können.
+  Wenn Sie als Functional Consultant zentrale Microsoft Dynamics 365 Business Central-Einrichtungsprozesse für kleine und mittelständische Unternehmen implementieren, ist diese Zertifizierung für Sie geeignet. Sie benötigen Erfahrung im Konfigurieren von Dynamics 365 Business Central-Rollencentern, einschließlich der Anpassung von Erkenntnissen, Hinweisen, Aktionskacheln, Berichten und Diagrammen. Außerdem sollten Sie Business Central mithilfe von Microsoft Power Platform-Komponenten erweitern können.
 
 
   Sie müssen über praktische Kenntnisse zu Business Central verfügen und die Terminologie, Prioritäten, Standards, Methoden und Best Practices der Branche verstehen. Wenn Sie über diese Kenntnisse verfügen und eine Rolle wie Administrator, Qualitätssicherung, DevOps, Entwickler, UX-Designer oder Lösungsarchitekt innehaben, kann die Zertifizierung „Dynamics 365 Business Central Functional Consultant Associate“ gut für Sie geeignet sein.
@@ -30,8 +30,8 @@ summary: >-
 
   - Nutzen Sie verfügbare Lernpfade in Microsoft Learn, und führen Sie weitere praktische Übungen durch.
 
-  - Registrieren Sie sich für einen Präsenzschulungskurs.
-subTitle: Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
+  - Melden Sie sich zu einem Präsenzschulungskurs an.
+subTitle: Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
 levels:
 - intermediate
 skills:
@@ -82,6 +82,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg in Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise LinkedIn oder Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
