--- a/learn-certs-pr/d365-finance-and-operations-apps-developer-associate/index.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-developer-associate/index.yml
@@ -1,28 +1,50 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
+title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
-  description: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen, indem sie standardisierte Anwendungskodierungsmuster, erweiterbare Funktionen und externe Integrationen verwenden.
+  title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
+  description: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Kandidaten bieten vollständig realisierte Lösungen, indem sie standardisierte Anwendungskodierungsmuster, erweiterbare Funktionen und externe Integrationen verwenden.
+  ms.openlocfilehash: 3b148a577473f7e96e116da2ccef1f445e77e373
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079062"
 uid: certification.d365-finance-and-operations-apps-developer-associate
 certificationRenewalUid: renewal.d365-finance-and-operations-apps-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen, indem sie standardisierte Anwendungskodierungsmuster, erweiterbare Funktionen und externe Integrationen verwenden.
-subTitle: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen.
+summary: >-
+  Wenn Sie ein Entwickler sind, der mit Functional Consultants sowie mit Lösungsarchitekten und technischen Architekten zusammenarbeitet und für die Umsetzung von Anforderungen in kritische Systemfunktionen mit Finance and Operations-Apps in Dynamics 365 verantwortlich ist, können Sie mithilfe dieser Zertifizierung Ihre Karriere verbessern. Sie müssen über Erfahrung in der Bereitstellung vollständig realisierter Lösungen über standardisierte Muster der Anwendungsprogrammierung, erweiterbare Funktionen und externe Integrationen verfügen.
+
+
+  Sie müssen mit den Methoden des Softwareentwicklungszyklus, der Datenintegrität und der Datensicherheitskonformität vertraut sein. Außerdem müssen Sie über detaillierte Kenntnisse und Erfahrung mit dem zugrunde liegenden Framework, Datenstrukturen und Objekten verfügen, die Finanz- und Betriebslösungen in Dynamics 365 zugeordnet sind und erstklassige Funktionen bieten.
+
+
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge&#58;
+
+  - Arbeiten Sie als Entwickler an einer oder mehreren Finanz- und Betriebs-Apps in Dynamics 365.
+
+  - Melden Sie sich, um bei der Entwicklung eines Projekts zu helfen.
+
+  - Treten Sie der [Dynamics 365-Community](https://community.dynamics.com/) bei.
+
+  - Nutzen Sie relevante Lernpfade auf Microsoft Learn.
+
+  - Registrieren Sie sich für Präsenzschulungen wie „Microsoft Dynamics 365&#58; Kernfinanzen und Betrieb“ und „Microsoft Dynamics 365&#58; Entwickler für Finanz- und Betriebs-Apps“.
+subTitle: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen.
 levels:
 - intermediate
 skills:
-- Beschreiben Sie Finanz- und Betriebsanwendungen und erweitern Sie Anwendungen mithilfe von Microsoft Power Platform-Technologien.  
-- Konfigurieren administrativer Funktionen und Workflows  
-- Verwalten von Finanz- und Betriebsdaten  
-- Validierung und Unterstützung von Lösungen  
-- Planen der Architektur und Lösungsentwicklung
-- Entwickler-Tools anwenden
-- Design und Entwicklung von AOT-Elementen
-- Entwickeln und Testen des Codes
-- Berichterstellung einführen
-- Integration und Verwaltung von Datenlösungen
-- Implementieren der Sicherheit und Leistungsoptimierung
+- Describe finance and operations apps, and extend apps by using Microsoft Power Platform technologies
+- Configure administrative features and workflows
+- Manage finance and operations data
+- Validate and support solutions
+- Plan architecture and solution design
+- Apply developer tools
+- Design and develop AOT elements
+- Develop and test code
+- Implement reporting
+- Integrate and manage data solutions
+- Implement security and optimize performance
 roles:
 - developer
 type: role-based
@@ -56,7 +78,7 @@ resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Lernpfad zur Zertifizirung
+- title: Lernpfad zur Zertifizierung
   description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Cdas
 - title: Exam Replay
@@ -68,7 +90,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
-
