--- a/learn-certs-pr/exams/ai-102.yml
+++ b/learn-certs-pr/exams/ai-102.yml
@@ -1,41 +1,61 @@
 ### YamlMime:Examination
-title: Designing and Implementing a Microsoft Azure AI Solution
+title: Entwerfen und Implementieren einer Microsoft Azure KI-Lösung
 metadata:
-  title: 'Exam AI-102: Designing and Implementing a Microsoft Azure AI Solution'
-  description: 'Exam AI-102: Designing and Implementing a Microsoft Azure AI Solution'
+  title: 'Prüfung AI-102: Designing and Implementing a Microsoft Azure AI Solution'
+  description: 'Prüfung AI-102: Designing and Implementing a Microsoft Azure AI Solution'
+  ms.openlocfilehash: 183038aa484c42fb2b0c9fa37f14cbf6368a14c9
+  ms.sourcegitcommit: a2b584eb3752159a44885ce2df4ef8c7263255e4
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/30/2021
+  ms.locfileid: "133301823"
 uid: exam.ai-102
 displayName: AI-102
-summary: |-
-  <div><div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am Freitag, 24. September 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument mit den bewerteten Fähigkeiten herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Punktzahl für einen erfolgreichen Abschluss: 700. Erfahren Sie mehr über Prüfungsergebnisse <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
-  
-  Kandidaten für Prüfung AI-102: Designing and Implementing a Microsoft Azure AI Solution Erstellen, Verwalten und Bereitstellen von AI Lösungen als Hebel für Azure Cognitive Services, Azure Cognitive Search und Microsoft Bot Framework.
-  
-  Zu ihren Aufgaben gehört es, an allen Phasen der Entwicklung von AI-Lösungen mitzuwirken - von der Anforderungsdefinition und dem Design über die Entwicklung, den Einsatz und die Wartung bis hin zur Leistungsoptimierung und Überwachung.
-  
-  Sie arbeiten mit Lösungsarchitekten zusammen, um ihre Vision zu übersetzen, und mit Datenwissenschaftlern, Datentechnikern, IoT-Spezialisten und AI-Entwicklern, um komplette durchgehende AI-Lösungen zu erstellen.
-  
-  Kandidaten für diese Prüfung sollten C# oder Python beherrschen und in der Lage sein, REST-basierte APIs und SDKs zu nutzen, um Computervision, Verarbeitung natürlicher Sprache, Knowledge Mining und dialogorientierte AI-Lösungen auf Azure zu entwickeln.
-  
-  Sie sollten auch die Komponenten verstehen, aus denen sich das Azure AI -Portfolio zusammensetzt, sowie die verfügbaren Datenspeicheroptionen. Außerdem müssen die Kandidaten verantwortungsvolle AI-Prinzipien verstehen und anwenden können.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Planen und Verwalten einer Azure Cognitive Services-Lösung; Implementierung von Computervisions-Lösungen, Implementieren von Lösungen zur Verarbeitung natürlicher Sprache, Implementierung von Knowledge-Mining-Lösungen und AI-Konversations-Lösungen.'
+summary: >-
+  <div><div><font color='red'><strong>Der Inhalt dieses Examens wurde am 30. November 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
+
+
+  Kandidaten für die Prüfung „AI-102: Designing and Implementing a Microsoft Azure AI Solution“ erstellen und verwalten KI-Lösungen, die Azure Cognitive Services und Azure Applied AI Services nutzen, und stellen diese Lösungen bereit.
+
+
+  Zu ihren Aufgaben gehört es, an allen Phasen der Entwicklung von KI-Lösungen mitzuwirken – von der Anforderungsdefinition und dem Entwurf über die Entwicklung, den Einsatz und die Wartung bis hin zur Leistungsoptimierung und Überwachung.
+
+
+  Sie arbeiten mit Lösungsarchitekten zusammen, um ihre Vision umzusetzen, sowie mit wissenschaftlichen/technischen Fachkräften für Daten, IoT-Spezialisten und KI-Entwicklern, um komplette End-to-End-KI-Lösungen zu erstellen.
+
+
+  Kandidaten für diese Prüfung sollten C# oder Python beherrschen und in der Lage sein, REST-basierte APIs und SDKs zu nutzen, um Lösungen für maschinelles Sehen, die Verarbeitung natürlicher Sprache, Knowledge Mining und dialogorientierte KI in Azure zu entwickeln.
+
+
+  Sie sollten auch die Komponenten des Azure-KI-Portfolios und die verfügbaren Datenspeicheroptionen verstehen. Außerdem müssen die Kandidaten die Prinzipien der verantwortungsvollen KI verstehen und anwenden können.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Planen und Verwalten von Azure Cognitive Services-Lösungen, Implementieren von Lösungen für maschinelles Sehen, Implementieren von Lösungen für die Verarbeitung natürlicher Sprache, Implementieren von Knowledge Mining-Lösungen und Implementieren dialogorientierter KI-Lösungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MbYD
 practiceTestUrl: https://www.mindhub.com/p/MU-AI-102?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AI-102&examname=Exam%20AI-102:%20Designing%20and%20Implementing%20a%20Microsoft%20Azure%20AI%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fai-102
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AI-102&examname=Exam%20AI-102:%20Designing%20and%20Implementing%20a%20Microsoft%20Azure%20AI%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fai-102
 locales:
 - en
 - ja
 - zh-cn
 - ko
+- de
+- fr
+- es
+- pt-br
+- ar-sa
+- ru
+- zh-tw
+- it
+- id-id
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Planen und Verwalten einer Azure Cognitive Services-Lösung (15-20%)
-- Implementieren von Computervisions-Lösungen (20-25%)
-- Implementieren von Lösungen zur Verarbeitung natürlicher Sprache (20-25%)
-- Implementieren von Knowledge-Mining-Lösungen (15-20%)
-- Implementierenvon AI-Konversationslösungen (15-20%)
+- The content of this exam was updated on November 30, 2021. Please download the exam skills outline below to see what changed.
+- Plan and manage an Azure Cognitive Services solution (15-20%)
+- Implement Computer Vision solutions (20-25%)
+- Implement natural language processing solutions (20-25%)
+- Implement knowledge mining solutions (15-20%)
+- Implement conversational AI solutions (15-20%)
 roles:
 - ai-engineer
 products:
@@ -60,7 +80,7 @@ products:
 courses:
 - uid: course.ai-102t00
 paths:
-- uid: learn.wwl.prepare-for-ai-engineering 
+- uid: learn.wwl.prepare-for-ai-engineering
 - uid: learn.wwl.provision-manage-azure-cognitive-services
 - uid: learn.wwl.process-translate-text-azure-cognitive-services
 - uid: learn.wwl.process-translate-speech-azure-cognitive-speech-services
@@ -74,7 +94,7 @@ relatedCertifications:
 - related:
     uid: certification.azure-ai-engineer
 resources:
-- title: Der Weg zur Zertifizierung
+- title: Reise zur Zertifizierung
   description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure AI Engineer Associate und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWy1S2
 - title: Schulungs- und Zertifizierungsleitfaden
