--- a/learn-certs-pr/exams/mb-340.yml
+++ b/learn-certs-pr/exams/mb-340.yml
@@ -1,25 +1,25 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Commerce Functional Consultant
+title: Microsoft Dynamics 365 Commerce Functional Consultant
 metadata:
-  title: 'MB-340: Microsoft Dynamics 365 Commerce Functional Consultant'
-  description: 'MB-340: Microsoft Dynamics 365 Commerce Functional Consultant'
-  ms.openlocfilehash: 16770ca6f6c0c42b35b3ec29576fdd3a71ef9010
-  ms.sourcegitcommit: c0897fc6536adf49a00cbefbe0ee43945146c08b
+  title: 'MB-340: Microsoft Dynamics 365 Commerce Functional Consultant'
+  description: 'MB-340: Microsoft Dynamics 365 Commerce Functional Consultant'
+  ms.openlocfilehash: 77f355cfc3cb99e6d10aef7705bfc0aacccca683
+  ms.sourcegitcommit: d80173e30006986f164a370573cac47d596ddb52
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/17/2021
-  ms.locfileid: "132112544"
+  ms.lasthandoff: 12/06/2021
+  ms.locfileid: "133742866"
 uid: exam.mb-340
 displayName: MB-340
 summary: >-
   <div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <strong><a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a></strong>.</font><br/><br/></div>
 
 
-  Kandidaten für diese Prüfung richten die Anwendungsfunktionalität in Dynamics 365 Commerce ein und verwenden sie. Zudem stellen sie Support für die Anwendung bereit.
+  Kandidaten für diese Prüfung richten die Anwendungsfunktionalität in Dynamics 365 Commerce ein und verwenden sie. Zudem stellen sie Support für die Anwendung bereit.
 
 
-  Kandidaten verfügen über ein ausgeprägtes Verständnis von einheitlichen Vorgängen im Commercebereich. Sie besitzen nach Möglichkeit Erfahrung im Konfigurieren, Bereitstellen und Verwalten von Dynamics 365 Commerce.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Konfigurieren von Dynamics 365 Commerce Headquarters, Konfigurieren von Produkten, Preisen, Rabatten, Loyalität und Zugehörigkeiten, Verwalten von Point-of-Sales-Systemen (POS) in Dynamics 365 Commerce, Konfigurieren und Verwalten von Dynamics 365 Commerce-Callcentern und Verwalten von E-Commerce.'
+  Kandidaten verfügen über ein ausgeprägtes Verständnis von einheitlichen Vorgängen im Commercebereich. Sie besitzen nach Möglichkeit Erfahrung im Konfigurieren, Bereitstellen und Verwalten von Dynamics 365 Commerce.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Konfigurieren von Dynamics 365 Commerce Headquarters, Konfigurieren von Produkten, Preisen, Rabatten, Loyalität und Zugehörigkeiten, Verwalten von Point-of-Sales-Systemen (POS) in Dynamics 365 Commerce, Konfigurieren und Verwalten von Dynamics 365 Commerce-Callcentern und Verwalten von E-Commerce.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWCZKn
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-340&examname=Exam%20MB-340:%20Microsoft%20Dynamics%20365%20Commerce%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-340
@@ -51,6 +51,8 @@ paths:
 - uid: learn-dynamics.configure-use-pos-commerce
 - uid: learn-dynamics.configure-work-call-centers-commerce
 - uid: learn-dynamics.configure-work-e-commerce
+courses:
+- uid: course.mb-340t00
 relatedCertifications:
 - related:
     uid: certification.d365-functional-consultant-commerce
