--- a/learn-certs-pr/exams/pl-200.yml
+++ b/learn-certs-pr/exams/pl-200.yml
@@ -1,37 +1,48 @@
 ### YamlMime:Examination
-title: 'Microsoft Power Platform Functional Consultant'
+title: Functional Consultant für Microsoft Power Platform
 metadata:
-  title: 'Exam PL-200: Microsoft Power Platform Functional Consultant'
-  description: 'Exam PL-200: Microsoft Power Platform Functional Consultant'
+  title: 'Prüfung PL-200: Functional Consultant für Microsoft Power Platform'
+  description: 'Prüfung PL-200: Functional Consultant für Microsoft Power Platform'
+  ms.openlocfilehash: 90cb08a23a9847b5f8587c460f344e31a2b045b6
+  ms.sourcegitcommit: 788d52f7255adbc93138b211a28be9c4fa35989b
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133101976"
 uid: exam.pl-200
 displayName: PL-200
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am Freitag, 1. Oktober 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
-  
-  Kandidaten für diese Prüfung führen Recherchen durch, erfassen Anforderungen, beziehen Fachexperten und Interessenvertreter ein, übersetzen Anforderungen und konfigurieren Power Platform-Lösungen und -Anwendungen. Sie erstellen Anwendungserweiterungen, benutzerdefinierte Benutzererfahrungen, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen.
+summary: >-
+  <div><div><font color="red">Das Produktteam hat vor Kurzem die Bemühungen zum Umbenennen von Common Data Service in Microsoft Dataverse abgeschlossen. Die Sicherheitsrolle Common Data Service-Benutzer ist jetzt „Basic User“. Der Common Data Service-Connector ist jetzt der Microsoft Dataverse-Connector. Diese Änderung spiegelt sich in der Prüfung ab dem 24. November 2021 wider.</font><br/><br/></div><div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 1. Oktober 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
 
-  Kandidaten implementieren das von und in Zusammenarbeit mit einem Lösungsarchitekten bereitgestellte Design sowie die von Designern für Benutzererfahrung festgelegten Standards, Marken und Artefakte.Sie entwerfen Integrationen, um eine nahtlose Integration mit Anwendungen und Diensten von Drittanbietern zu ermöglichen.
 
-  Die Kandidaten arbeiten aktiv mit Mitgliedern des Qualitätssicherungsteams zusammen, um sicherzustellen, dass die Lösungen den funktionalen und nicht funktionalen Anforderungen entsprechen. Sie identifizieren, generieren und liefern Artefakte für die Verpackung und Bereitstellung an DevOps-Ingenieure und bieten Power Platform-Administratoren Betriebs- und Wartungstrainings an.
-  
-  Fachberater für Power Platform sollten mit der Verwendung von Power Platform-Komponenten zum Erweitern und Anpassen von Microsoft-Apps und -Services wie Teams, Dynamics 365, Excel und Word vertraut sein.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden Aufgaben auszuführen: Konfigurieren von Microsoft Dataverse; Apps mit Hilfe von Power Apps erstellen. PowerAutomate erstellen und verwalten; Chatbots von Power Virtual Agents zu erstellen und Power Apps in andere Apps und Services zu integrieren.'
+  Kandidaten für diese Prüfung führen Recherchen durch, erfassen Anforderungen, beziehen Fachexperten und Interessenvertreter ein, übersetzen Anforderungen und konfigurieren Microsoft Power Platform-Lösungen und -Anwendungen. Sie erstellen Anwendungserweiterungen, benutzerdefinierte Benutzererfahrungen, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen.
+
+
+  Die Kandidaten setzen das von einem Lösungsarchitekten und in Zusammenarbeit mit ihm erstellte Design sowie die von den Designern der Benutzererfahrung festgelegten Standards, das Branding und die Artefakte um. Sie entwerfen Integrationen, um eine nahtlose Integration mit Anwendungen und Diensten von Drittanbietern zu ermöglichen.
+
+
+  Die Kandidaten arbeiten aktiv mit Mitgliedern des Qualitätssicherungsteams zusammen, um sicherzustellen, dass die Lösungen den funktionalen und nicht funktionalen Anforderungen entsprechen. Sie identifizieren, generieren und liefern Artefakte für die Verpackung und Bereitstellung für DevOps-Ingenieure und bieten Microsoft Power Platform-Administratoren Betriebs- und Wartungsschulungen an.
+
+
+  Functional Consultants für Microsoft Power Platform sollten mit der Verwendung von Microsoft Power Platform-Komponenten vertraut sein, um Microsoft-Apps und -Dienste wie Teams, Dynamics 365, Excel und Word zu erweitern und anzupassen.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden Aufgaben auszuführen: Konfigurieren von Microsoft Dataverse, Erstellen von Apps mithilfe von Microsoft Power Apps, Erstellen und Verwalten von Microsoft Power Automate, Implementieren von Microsoft Power Virtual Agents-Chatbots sowie Integrieren von Microsoft Power Apps in andere Apps und Dienste.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CQVs
 practiceTestUrl: https://www.mindhub.com/p/MU-PL-200?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=PL-200&examname=Exam%20PL-200:%20Microsoft%20Power%20Platform%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-200
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=PL-200&examname=Exam%20PL-200:%20Microsoft%20Power%20Platform%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-200
 locales:
 - en
 - ja
 levels:
 - intermediate
 skills:
-- Der Inhalt dieer Prüfung wird am 1. Oktober 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
-- Microsoft Dataverse konfigurieren  (25-30%)
-- Erstellen Sie Apps mit Hikfe von Power Apps (20-25%)
-- Erstellen und Verwalten von Power Automate (15-20%)
-- Implementieren Sie Power Virtual Agents Chatbots (10-15%)
-- Integrieren Sie Power Apps in andere Apps und Services (15-20%)
+- The content of this exam was updated on October 1, 2021. Please download the exam skills outline below to see what changed.
+- Configure Microsoft Dataverse (20-25%)
+- Create apps by using Microsoft Power Apps (15-20%)
+- Create and manage Microsoft Power Automate (15-20%)
+- Implement Microsoft Power Virtual Agents chatbots (10-15%)
+- Integrate Microsoft Power Apps with other apps and services (10-15%)
+- Manage solutions (15-20%)
 roles:
 - business-analyst
 - developer
@@ -45,6 +56,11 @@ products:
 - power-platform
 - office-teams
 - power-virtual-agents
+exams:
+- uid: exam.mb-210
+- uid: exam.mb-220
+- uid: exam.mb-230
+- uid: exam.mb-240
 courses:
 - uid: course.pl-200t00
 paths:
@@ -65,16 +81,16 @@ relatedCertifications:
 - related:
     uid: certification.power-platform-functional-consultant-associate
 resources:
-- title: Lernpfad zur Zertifizirung
+- title: Lernpfad zur Zertifizierung
   description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4GP08
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
@@ -84,9 +100,8 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
+- title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
