--- a/learn-certs-pr/exams/sc-400.yml
+++ b/learn-certs-pr/exams/sc-400.yml
@@ -1,24 +1,32 @@
 ### YamlMime:Examination
-title: 'Microsoft Information Protection Administrator'
+title: Microsoft Information Protection-Administrator
 metadata:
-  title: 'Exam SC-400: Microsoft Information Protection Administrator'
-  description: 'Exam SC-400: Microsoft Information Protection Administrator'
+  title: 'Prüfung SC-400: Microsoft Information Protection-Administrator'
+  description: 'Prüfung SC-400: Microsoft Information Protection-Administrator'
+  ms.openlocfilehash: aaaacae2831dc560a48d8e9c0c2ccb9e876d9f52
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078886"
 uid: exam.sc-400
 displayName: SC-400
-summary: |-
-  <div><font color="red"><strong>Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+summary: >-
+  <div><font color="red"><strong>Der Inhalt dieses Examens wurde am 23. Juli 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
 
-  Der Informationsschutz-Administrator plant und implementiert Kontrollen, die die Compliance-Anforderungen des Unternehmens erfüllen. Diese Person ist dafür verantwortlich, Anforderungen und Compliance-Kontrollen technisch umzusetzen. Sie helfen den Eigentümern der Organisationskontrolle, konform zu werden und zu bleiben.
-  
-  Sie arbeiten mit IT-Mitarbeitern, Eigentümern von Geschäftsanwendungen, Mitarbeitern und rechtlichen Interessengruppen zusammen, um Technologien zu implementieren, die Richtlinien und Kontrollen unterstützen, die erforderlich sind, um die regulatorischen Anforderungen für ihr Unternehmen ausreichend zu erfüllen. Sie arbeiten auch mit der Compliance- und Sicherheitsleitung zusammen, z. B. einem Chief Compliance Officer und einem Sicherheitsbeauftragten, um die gesamte Breite des damit verbundenen Unternehmensrisikos zu bewerten und diese Richtlinien umzusetzen.
-  
-  Diese Person definiert geltende Anforderungen und testet IT-Prozesse und -Operationen anhand dieser Richtlinien und Kontrollen. Sie sind für die Erstellung von Richtlinien und Regeln für die Klassifizierung von Inhalten, die Verhinderung von Datenverlust, die Verwaltung und den Schutz verantwortlich.
-  
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Implementieren des Informationsschutzes; Prävention von Datenverlust implementieren und Informations-Governance implementieren.'
+
+  Der*Die Microsoft Information Protection-Administrator*in plant und implementiert Kontrollen, die die Complianceanforderungen der Organisation erfüllen. Diese Person ist für die Umsetzung von Anforderungen und Compliancekontrollen in die technische Implementierung verantwortlich. Sie unterstützen die Verantwortlichen für die Organisationssteuerung dabei, die Complianceanforderungen dauerhaft zu erfüllen.
+
+
+  Sie arbeiten mit IT-Mitarbeiter*innen (IT), den Verantwortlichen für Geschäftsanwendungen, der Personalabteilung und juristischen Stakeholder*innen zusammen, um Technologien zur Unterstützung von Richtlinien und Kontrollen zu implementieren, die zur ausreichenden Erfüllung gesetzlicher Anforderungen für ihre Organisation erforderlich sind. Sie arbeiten auch mit Führungskräften im Bereich Compliance und Sicherheit zusammen, z. B. einem*einer Chief Compliance Officer und einem*einer Sicherheitsbeauftragten, um die gesamte Bandbreite des damit verbundenen Unternehmensrisikos zu bewerten und diese Richtlinien gemeinsam zu entwickeln.
+
+
+  Diese Person definiert die anwendbaren Anforderungen und testet IT-Prozesse und -Vorgänge anhand dieser Richtlinien und Kontrollen. Sie sind für das Erstellen von Richtlinien und Regeln für die Bereiche Inhaltsklassifizierung, Verhinderung von Datenverlust, Governance und Schutz verantwortlich.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Implementieren von Information Protection, Implementieren der Verhinderung von Datenverlust und Implementieren von Informationsgovernance.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Mr80
 practiceTestUrl: https://in.mindhub.com/sc-400-microsoft-information-protection-administrator-microsoft-official-practice-test/p/MU-SC-400?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=SC-400&examname=Exam%20SC-400:%20Microsoft%20Information%20Protection%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-400
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=SC-400&examname=Exam%20SC-400:%20Microsoft%20Information%20Protection%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-400
 locales:
 - en
 - zh-cn
@@ -35,10 +43,10 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 23. Juli 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Informationsschutz implementieren (35-40%)
-- Implementieren der Verhinderung von Datenverlust (30-35%)
-- Implementieren von Informations-Governance (25-30%)
+- The content of this exam was updated on July 23, 2021. Please download the exam skills outline below to see what changed.
+- Implement information protection (35-40%)
+- Implement data loss prevention (30-35%)
+- Implement information governance (25-30%)
 roles:
 - administrator
 - ip-admin
@@ -59,13 +67,13 @@ relatedCertifications:
 - related:
     uid: certification.information-protection-administrator
 resources:
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
   href: https://aka.ms/traincertposter
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
@@ -75,8 +83,8 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
+- title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
