--- a/learn-certs-pr/roles/functional-consultant.yml
+++ b/learn-certs-pr/roles/functional-consultant.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Role
-title: Fachtechnischer Berater
+title: Functional Consultant
 metadata:
-  title: Fachtechnischer Berater
-  description: Funktionsberater nutzen Microsoft Dynamics 365 und Microsoft Power Platform um Kundenbedürfnisse zu antizipieren und zu planen.
-  ms.openlocfilehash: f227110263bb37e4001b7e625e7f2434f8f89994
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  title: Functional Consultant
+  description: Functional Consultants (Funktionsberater) nutzen Microsoft Dynamics 365 und Microsoft Power Platform, um Kundenbedürfnisse zu antizipieren und zu planen.
+  ms.openlocfilehash: b34e4ee923d360f8da041733ede93d59762a83cd
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132111734"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079095"
 uid: role.functional-consultant
 summary: >
-  Funktionsberater nutzen Microsoft Dynamics 365 und Microsoft Power Platform um Kundenbedürfnisse zu antizipieren und zu planen.
-subTitle: Funktionsberater nutzen Microsoft Dynamics 365 und Microsoft Power Platform um Kundenbedürfnisse zu antizipieren und zu planen.
+  Functional Consultants (Funktionsberater) nutzen Microsoft Dynamics 365 und Microsoft Power Platform, um Kundenbedürfnisse zu antizipieren und zu planen.
+subTitle: Functional Consultants (Funktionsberater) nutzen Microsoft Dynamics 365 und Microsoft Power Platform, um Kundenbedürfnisse zu antizipieren und zu planen.
 certificationPaths:
-- title: Dynamics 365 Customer Service Functional Consultant
-  linkedInKeywords: Dynamics 365 Customer Service Functional Consultant
+- title: Dynamics 365 Customer Service Functional Consultant
+  linkedInKeywords: Dynamics 365 Customer Service functional consultant
   uid: certification-path.d365-functional-consultant-customer-service
   prerequisites:
   - uid: certification.d365-fundamentals-customer-engagement-apps-crm
@@ -25,8 +25,8 @@ certificationPaths:
   - uid: certification.d365-functional-consultant-customer-service
     levels:
     - intermediate
-- title: Dynamics 365 Field Service Functional Consultant
-  linkedInKeywords: Dynamics 365 Field Service Functional Consultant
+- title: Dynamics 365 Field Service Functional Consultant
+  linkedInKeywords: Dynamics 365 Field Service functional consultant
   uid: certification-path.d365-functional-consultant-field-service
   prerequisites:
   - uid: certification.d365-fundamentals-customer-engagement-apps-crm
@@ -36,8 +36,8 @@ certificationPaths:
   - uid: certification.d365-functional-consultant-field-service
     levels:
     - intermediate
-- title: Dynamics 365 Finance Functional Consultant
-  linkedInKeywords: Dynamics 365 Finance Functional Consultant
+- title: Dynamics 365 Finance Functional Consultant
+  linkedInKeywords: Dynamics 365 Finance functional consultant
   uid: certification-path.d365-functional-consultant-financials
   prerequisites:
   - uid: certification.d365-fundamentals-finance-and-operations-apps-erp
@@ -47,8 +47,8 @@ certificationPaths:
   - uid: certification.d365-functional-consultant-financials
     levels:
     - intermediate
-- title: Dynamics 365 Manufacturing Functional Consultant
-  linkedInKeywords: Dynamics 365 Manufacturing Functional Consultant
+- title: Dynamics 365 Manufacturing Functional Consultant
+  linkedInKeywords: Dynamics 365 Manufacturing functional consultant
   uid: certification-path.d365-functional-consultant-manufacturing
   prerequisites:
   - uid: certification.d365-fundamentals-finance-and-operations-apps-erp
@@ -58,8 +58,8 @@ certificationPaths:
   - uid: certification.d365-functional-consultant-manufacturing
     levels:
     - intermediate
-- title: Dynamics 365 Marketing Functional Consultant
-  linkedInKeywords: Dynamics 365 Marketing Functional Consultant
+- title: Dynamics 365 Marketing Functional Consultant
+  linkedInKeywords: Dynamics 365 Marketing functional consultant
   uid: certification-path.d365-functional-consultant-marketing
   prerequisites:
   - uid: certification.d365-fundamentals-customer-engagement-apps-crm
@@ -69,8 +69,8 @@ certificationPaths:
   - uid: certification.d365-functional-consultant-marketing
     levels:
     - intermediate
-- title: Dynamics 365 Sales Functional Consultant
-  linkedInKeywords: Dynamics 365 Sales Functional Consultant
+- title: Dynamics 365 Sales Functional Consultant
+  linkedInKeywords: Dynamics 365 Sales functional consultant
   uid: certification-path.d365-functional-consultant-sales
   prerequisites:
   - uid: certification.d365-fundamentals-customer-engagement-apps-crm
@@ -80,8 +80,8 @@ certificationPaths:
   - uid: certification.d365-functional-consultant-sales
     levels:
     - intermediate
-- title: Dynamics 365 Supply Chain Management Functional Consultant
-  linkedInKeywords: Dynamics 365 Supply Chain Management Functional Consultant
+- title: Dynamics 365 Supply Chain Management Functional Consultant
+  linkedInKeywords: Dynamics 365 Supply Chain Management functional consultant
   uid: certification-path.d365-functional-consultant-supply-chain-management
   prerequisites:
   - uid: certification.d365-fundamentals-finance-and-operations-apps-erp
@@ -92,7 +92,7 @@ certificationPaths:
     levels:
     - intermediate
 - title: Functional Consultant für Power Platform
-  linkedInKeywords: Power Platform Functional Consultant
+  linkedInKeywords: Power Platform functional consultant
   uid: certification-path.power-platform-functional-consultant-associate
   prerequisites:
   - uid: certification.d365-fundamentals-finance-and-operations-apps-erp
@@ -107,7 +107,7 @@ certificationPaths:
     levels:
     - intermediate
 - title: Functional Consultant für Dynamics 365 Business Central
-  linkedInKeywords: Dynamics 365 Business Central Functional Consultant
+  linkedInKeywords: Dynamics 365 Business Central functional consultant
   uid: certification-path.d365-business-central-functional-consultant-associate
   prerequisites:
   - uid: certification.d365-fundamentals-finance-and-operations-apps-erp
