--- a/learn-certs-pr/exams/az-140.yml
+++ b/learn-certs-pr/exams/az-140.yml
@@ -1,24 +1,34 @@
 ### YamlMime:Examination
-title: 'Configuring and Operating Microsoft Azure Virtual Desktop'
+title: Konfigurieren und Betreiben von Microsoft Azure Virtual Desktop
 metadata:
-  title: 'Exam AZ-140: Configuring and Operating Microsoft Azure Virtual Desktop'
-  description: 'Exam AZ-140: Configuring and Operating Microsoft Azure Virtual Desktop'
+  title: 'Prüfung AZ-140: Configuring and Operating Microsoft Azure Virtual Desktop'
+  description: 'Prüfung AZ-140: Configuring and Operating Microsoft Azure Virtual Desktop'
+  ms.openlocfilehash: 41f74557f245717ffe6e2d2f53bf1e6ec33a28fd
+  ms.sourcegitcommit: ed10dec6b04e8c68123f45a761562a79ac8bdded
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/23/2021
+  ms.locfileid: "132942370"
 uid: exam.az-140
 displayName: AZ-140
-summary: |-
-  <div><div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am Freitag, 24. September 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument mit den bewerteten Fähigkeiten herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Punktzahl für einen erfolgreichen Abschluss: 700. Erfahren Sie mehr über Prüfungsergebnisse <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
+summary: >-
+  <div><div><font color='red'><strong>Der Inhalt dieses Examens wurde am 22. November 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
 
-  Kandidaten für diese Prüfung sind Administratoren mit Fachkenntnissen in der Planung, Bereitstellung und Verwaltung von virtuellen Desktops und Remote-Apps (für jedes Gerät) auf Azure.
-  
-  Zu den Aufgaben dieser Rolle gehört die Bereitstellung von virtuellen Desktoperlebnissen und Anwendungen für Azure. Fachkräfte in dieser Rolle stellen Anwendungen auf Azure Virtual Desktop bereit und optimieren sie für die Ausführung in virtuellen Multisession-Umgebungen. Um diese Erfahrungen zu liefern, arbeiten sie eng mit den  Azure-Administratoren und -Architekten zusammen, zusammen mit Microsoft 365 Administrators.
-  
-  Kandidaten für diese Prüfung sollten Erfahrung mit Azure-Technologien haben, einschließlich Virtualisierung, Netzwerk, Identität, Speicherung, Backups, Ausfallsicherheit und Notfallwiederherstellung. Sie sollten die Technologien der lokalen virtuellen Desktop-Infrastruktur in Bezug auf eine Migration zu Azure Virtual Desktop verstehen. Diese Fachleute verwenden das Azure-Portal und Azure Resource Manager-Vorlagen,  für viele Aufgaben. Diese Rolle kann PowerShell und Azure Command-Line Interface (CLI) für eine effizientere Automatisierung verwenden.
-  
-  Kandidaten für diese Prüfung müssen über fundierte  Azure-administrative Fähigkeiten verfügen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Planen einer Azure Virtual Desktop -Architektur; Implementieren einer Azure Virtual Desktop-Infrastruktur; Verwalten von Zugriff und Sicherheit; Verwalten von Benutzerumgebungen und Apps; und Überwachen und Warten einer Azure Virtual Desktop-Infrastruktur.'
+
+  Kandidaten für diese Prüfung sind Administratoren mit Fachkenntnissen in der Planung, Bereitstellung und Verwaltung virtueller Desktopumgebungen und Remote-Apps (für beliebige Geräte) in Azure.
+
+
+  Zu den Aufgaben dieser Rolle gehört die Bereitstellung virtueller Desktopumgebungen und Apps in Azure. Fachkräfte in dieser Rolle stellen Anwendungen in Azure Virtual Desktop bereit und optimieren sie für die Ausführung in virtuellen Umgebungen mit mehreren Sitzungen. Zum Bereitstellen dieser Umgebungen arbeiten sie eng mit den Azure-Administratoren und -Architekten sowie mit Microsoft 365-Administratoren zusammen.
+
+
+  Die Kandidaten für diese Prüfung sollten über Erfahrung mit Azure-Technologien verfügen, einschließlich der Bereiche Virtualisierung, Netzwerk, Identität, Speicher, Sicherungen, Resilienz und Notfallwiederherstellung. Sie sollten die Technologien der lokalen virtuellen Desktopinfrastruktur im Hinblick auf eine Migration zu Azure Virtual Desktop verstehen. Diese Fachleute verwenden das Azure-Portal und Azure Resource Manager-Vorlagen, um viele ihrer Aufgaben zu erledigen. Diese Rolle kann PowerShell und die Azure-Befehlszeilenschnittstelle (Command-Line Interface, CLI) für eine effizientere Automatisierung verwenden.
+
+
+  Kandidaten für diese Prüfung müssen über fundierte Kenntnisse zur Azure-Verwaltung verfügen.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Planen einer Azure Virtual Desktop -Architektur, Implementieren einer Azure Virtual Desktop-Infrastruktur, Verwalten von Zugriff und Sicherheit, Verwalten von Benutzerumgebungen und Apps sowie Überwachen und Warten einer Azure Virtual Desktop-Infrastruktur.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MFST
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-140&examname=Exam%20AZ-140:%20Configuring%20and%20Operating%20Azure%20Virtual%20Desktop&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-140
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-140&examname=Exam%20AZ-140:%20Configuring%20and%20Operating%20Azure%20Virtual%20Desktop&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-140
 locales:
 - en
 - ja
@@ -35,12 +45,12 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Planen einer Azure Virtual Desktop Architecture (10-15%)
-- Implementieren einer Azure Virtual Desktop Infrastructure (25-30%)
-- Verwalten von Zugriff und Sicherheit (10-15%)
-- Verwalten von Benutzerumgebungen und Apps (20-25%)
-- Überwachen und Pflegen einer Azure Virtual Desktop Infrastructure (20-25%)
+- The content of this exam was updated on November 22, 2021. Please download the exam skills outline below to see what changed.
+- Plan an Azure Virtual Desktop architecture (10-15%)
+- Implement an Azure Virtual Desktop infrastructure (25-30%)
+- Manage access and security (10-15%)
+- Manage user environments and apps (20-25%)
+- Monitor and maintain an Azure Virtual Desktop infrastructure (20-25%)
 roles:
 - administrator
 products:
@@ -66,24 +76,24 @@ products:
 - azure-monitor
 - azure-advisor
 - azure-virtual-desktop
-courses:
-- uid: course.az-140t00
 paths:
 - uid: learn-m365.windows-virtual-desktop
+courses:
+- uid: course.az-140t00
 relatedCertifications:
 - related:
     uid: certification.azure-virtual-desktop-specialty
 resources:
-- title: Der Weg zur Zertifizierung
-  description: Informieren Sie sich über die Schritte zur Zertifizierung in Azure for Virtual Desktop Specialty und die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen. 
+- title: Reise zur Zertifizierung
+  description: Für die Examensvorbereitung sollten Sie sich über die Schritte für die Zertifizierung „Azure for Virtual Desktop Specialty“ und die verfügbaren Ressourcen informieren.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWKHFH
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://aka.ms/traincertposter
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
@@ -93,8 +103,8 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
+- title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
