--- a/learn-certs-pr/exams/az-303.yml
+++ b/learn-certs-pr/exams/az-303.yml
@@ -1,25 +1,43 @@
 ### YamlMime:Examination
 title: Microsoft Azure Architect Technologies
 metadata:
-  title: 'Exam AZ-303: Microsoft Azure Architect Technologies'
-  description: 'Exam AZ-303: Microsoft Azure Architect Technologies'
+  title: 'Prüfung AZ-303: Microsoft Azure Architect Technologies'
+  description: 'Prüfung AZ-303: Microsoft Azure Architect Technologies'
+  ms.openlocfilehash: 7e4a7b4a39fb36cf8d00bf02aef8880904316a48
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079436"
 uid: exam.az-303
 displayName: AZ-303
-summary: |-
-  <div><div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am Freitag, 24. September 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument mit den bewerteten Fähigkeiten herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Punktzahl für einen erfolgreichen Abschluss: 700. Erfahren Sie mehr über Prüfungsergebnisse <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
+summary: >-
+  <div><div><font color='red'>DIESES EXAMEN WIRD AM 31. MÄRZ 2022 UM 23:59 UHR CENTRAL STANDARD TIME EINGESTELLT. Eine Ersatzprüfung, <a href="/learn/certifications/exams/az-305">Prüfung AZ-305</a>, ist verfügbar. Die Zertifizierung <a href="/learn/certifications/azure-solutions-architect/">Microsoft Certified: Azure Solutions Architect Expert</a> wird durch Erfüllen der folgenden Anforderungen erlangt:<ul>
 
-  Kandidaten für diese Prüfung sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit. Kandidaten sollten über fortgeschrittene Kenntnisse zur Verwaltung von Azure verfügen. Kandidaten sollten über Azure-Entwicklungs- und DevOps-Prozesse Bescheid wissen. 
+  <li>Bestandene Prüfung AZ-303 und <a href="/learn/certifications/exams/az-305">Prüfung AZ-305</a> <strong>oder</strong></li>
+
+  <li>Bestandene Prüfung AZ-303 und <a href="/learn/certifications/exams/az-304">Prüfung AZ-304</a> <em>(bevor sie am 31. März 2022 eingestellt werden)</em></li>
+
+  </ul>In <a href="https://aka.ms/AzureSlnsArchBlog">diesem Blogbeitrag</a> finden Sie weitere Informationen zu Zertifizierungsmöglichkeiten.</font><br/><br/></div>
+
+  <div><font color='red'><strong>Der Inhalt dieses Examens wurde am 23. November 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
+
+
+  Kandidaten für dieses examens sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit. Kandidat*innen sollten über fortgeschrittene Fähigkeiten im Verwalten von Azure verfügen. Kandidat*innen sollten die Entwicklung mit Azure und DevOps-Prozesse verstehen.
+
 
   Zu den Aufgaben eines Azure Solution Architects gehören die Beratung von Stakeholdern und die Umsetzung von Geschäftsanforderungen in sichere, skalierbare und zuverlässige Cloud-Lösungen.
 
+
   Ein Azure Solution Architect arbeitet mit Cloud-Administratoren, Cloud-Datenbankadministratoren und Clients zusammen, um Lösungen zu implementieren.
 
+
   Ein Kandidat für diese Prüfung sollte über umfassende Erfahrung und Kenntnisse in verschiedenen Aspekten des IT-Betriebs verfügen, einschließlich Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenmanagement, Budgetierung und Governance. Jemand in dieser Position sollte Entscheidungen in den einzelnen Bereichen steuern, die eine Gesamtlösung beeinflussen. Darüber hinaus sollte diese Rolle über Expertenkenntnisse in der Azure-Verwaltung verfügen und Erfahrung mit der Azure-Entwicklung und den DevOps-Prozessen haben.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Implementieren und Überwachen einer Azure-Infrastruktur; Implementierung von Management- und Sicherheitslösungen; Implementieren von Lösungen für Apps; und Datenplattformen implementieren und verwalten.'
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Implementieren und Überwachen einer Azure-Infrastruktur, Implementierung von Verwaltungs- und Sicherheitslösungen, Implementieren von Lösungen für Apps sowie Implementieren und Verwalten von Datenplattformen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4psD6
 practiceTestUrl: https://www.mindhub.com/p/MU-AZ-303?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-303&examname=Exam%20AZ-303:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-303
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-303&examname=Exam%20AZ-303:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-303
 locales:
 - en
 - ja
@@ -36,11 +54,12 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Implementieren und Überwachen einer Azure-Infrastruktur (50-55%)
-- Implementierung von Management- und Sicherheitslösungen (25-30%)
-- Implementieren Sie Lösungen für Apps (10-15%)
-- Implementierung und Verwaltung von Datenplattformen (10-15%)
+- The content of this exam was updated on November 23, 2021. Please download the exam skills outline below to see what changed.
+- Implement and monitor an Azure infrastructure (50-55%)
+- Implement management and security solutions (25-30%)
+- Implement solutions for apps (10-15%)
+- Implement and manage data platforms (10-15%)
+retirementDate: 03/31/2022
 roles:
 - solution-architect
 products:
@@ -67,13 +86,13 @@ resources:
 - title: Reise zur Zertifizierung
   description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure Solutions Architect Expert und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AJyF
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://aka.ms/traincertposter
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
@@ -83,9 +102,8 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
+- title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
