--- a/learn-certs-pr/exams/az-800.yml
+++ b/learn-certs-pr/exams/az-800.yml
@@ -1,29 +1,38 @@
 ### YamlMime:Examination
 title: Administering Windows Server Hybrid Core Infrastructure (beta)
 metadata:
-  title: 'Exam AZ-800: Administering Windows Server Hybrid Core Infrastructure (beta)'
-  description: 'Exam AZ-800: Administering Windows Server Hybrid Core Infrastructure (beta)'
+  title: 'Prüfung AZ-800: Administering Windows Server Hybrid Core Infrastructure (Beta)'
+  description: 'Prüfung AZ-800: Administering Windows Server Hybrid Core Infrastructure (Beta)'
+  ms.openlocfilehash: da6b4fda5fc7ab8c7f3df8d1ab7d75ff78b88f34
+  ms.sourcegitcommit: 9eca3b739709f987540c0877a64f38bbbe27bf50
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 12/07/2021
+  ms.locfileid: "133989050"
 uid: exam.az-800
 displayName: AZ-800
-summary: |-
-  Kandidaten für diese Prüfung verwalten zentrale Windows Server-Workloads unter Verwendung von lokalen, hybriden und Cloud-Technologien. Diese Spezialisten sollten über Fachwissen bei der Implementierung und Verwaltung von lokalen und hybriden Lösungen verfügen, z. B. in den Bereichen Identität, Verwaltung, Datenverarbeitung, Netzwerk und Speicherung. Diese Experten verwenden verwaltungstechnische Instrumente und Technologien, darunter Windows Admin Center, PowerShell, Azure Arc und IaaS Verwaltung virtueller Maschinen.
-  
-  Kandidaten für diese Zertifizierung sollten über umfangreiche Erfahrungen in der Arbeit mit Windows Server Betriebssystemen haben.
-  
-  <div><br/><font color='red'><strong>HINWEIS: Diese Prüfung wird im Dezember 2021 verfügbar sein.</strong></font></div>
-subTitle: 'Diese Prüfung wird im Dezember 2021 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Bereitstellen und Verwalten von Active Directory Domain Services (AD DS) in lokalen und cloud-Umgebungen; Verwalten von Windows Servers und Workloads in einer hybriden Umgebung; Verwalten von virtuellen Maschinen und Containern; Implementieren und Verwalten einer lokalen und hybriden Netzwerkinfrastruktur; Verwalten von Speicher- und Dateidiensten.'
+summary: >-
+  Kandidaten für diese Prüfung verwalten zentrale Windows Server-Workloads unter Verwendung von lokalen, Hybrid- und Cloudtechnologien. Diese Spezialisten sollten über Fachwissen bei der Implementierung und Verwaltung von lokalen und hybriden Lösungen verfügen, z. B. in den Bereichen Identität, Verwaltung, Datenverarbeitung, Netzwerk und Speicherung. Sie verwenden Verwaltungstools und Technologien, darunter Windows Admin Center, PowerShell, Azure Arc und die IaaS-Verwaltung für VMs.
+
+
+  Kandidaten für diese Zertifizierung sollten über umfangreiche Erfahrungen in der Arbeit mit Windows Server-Betriebssystemen haben.
+
+
+  <div><br/><font color='red'><strong>HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zu den Prüfungsnoten finden Sie <a href="/learn/certifications/beta-exams">hier</a>. Betaprüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Erfahren Sie mehr <a href="/learn/certifications/beta-exams">über den Wert und die Wichtigkeit von Betaprüfungen</a>.</strong></font></div>
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Bereitstellen und Verwalten von Active Directory Domain Services (AD DS) in lokalen und Cloudumgebungen; Verwalten von Windows Servers und Workloads in einer hybriden Umgebung; Verwalten von virtuellen Maschinen und Containern; Implementieren und Verwalten einer lokalen und hybriden Netzwerkinfrastruktur; Verwalten von Speicher- und Dateidiensten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWKI0r
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-800&examname=Exam%20AZ-800:%20Administering%20Windows%20Server%20Hybrid%20Core%20Infrastructure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-800
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Bereitstellung und Verwaltung von Active Directory Domain Services (AD DS)  in lokalen und cloud-Umgebungen (30-35%)
-- Verwalten vonWindows Servers und Workloads in einer hybriden Umgebung (10-15%)
-- Verwalten von virtuellen Maschinen und Containern (15-20%)
-- Implementierung und Verwaltung einer ortsfesten und hybriden Netzwerkinfrastruktur (15-20%) 
-- Verwalten von Speicher- und Dateidiensten (15-20%)
+- Deploy and manage Active Directory Domain Services (AD DS) in on-premises and cloud environments (30-35%)
+- Manage Windows Servers and workloads in a hybrid environment (10-15%)
+- Manage virtual machines and containers (15-20%)
+- Implement and manage an on-premises and hybrid networking infrastructure (15-20%)
+- Manage storage and file services (15-20%)
 roles:
 - administrator
 - identity-access-admin
@@ -48,19 +57,25 @@ products:
 - azure-virtual-machines
 - mdatp
 - windows-server
+paths:
+- uid: learn.wwl.deploy-manage-identity-infrastructure
+- uid: learn.wwl.manage-windows-servers-workloads-hybrid-environment
+- uid: learn.wwl.manage-virtualization-containers-hybrid-environment
+- uid: learn.wwl.implement-operate-premises-hybrid
+- uid: learn.wwl.configure-storage-file-services
 exams:
 - uid: exam.az-801
 relatedCertifications:
 - related:
     uid: certification.windows-server-hybrid-administrator
 resources:
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://aka.ms/traincertposter
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
@@ -70,8 +85,8 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
+- title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
