--- a/learn-certs-pr/exams/dp-100.yml
+++ b/learn-certs-pr/exams/dp-100.yml
@@ -1,23 +1,39 @@
 ### YamlMime:Examination
-title: Designing and Implementing a Data Science Solution on Azure
+title: Entwerfen und Implementieren einer Data Science-Lösung in Azure
 metadata:
-  title: 'Exam DP-100: Designing and Implementing a Data Science Solution on Azure'
-  description: 'Exam DP-100: Designing and Implementing a Data Science Solution on Azure'
+  title: 'Prüfung DP-100: Entwerfen und Implementieren einer Data Science-Lösung in Azure'
+  description: 'Prüfung DP-100: Entwerfen und Implementieren einer Data Science-Lösung in Azure'
+  ms.openlocfilehash: b6b0fb95d3b0370f2b65e2fce3b377c845c54644
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079479"
 uid: exam.dp-100
 displayName: DP-100
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 20. Mai 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+summary: >-
+  <div>
 
-  Kandidaten für diese Prüfung sollten über Fachwissen in der Anwendung von Datenwissenschaft und maschinellem Lernen verfügen, um maschinelle Lernprozesse auf folgenden Systemen zu implementieren und auszuführen Microsoft Azure.
-  
-  Zu den Aufgaben dieser Rolle gehören die Planung und Schaffung einer geeigneten Arbeitsumgebung für Data Science Workloads auf Azure. Sie führen Datenexperimente durch und trainieren Vorhersagemodelle. Darüber hinaus verwalten, optimieren und implementieren sie Modelle für maschinelles Lernen in der Produktion.
-  
-  Ein Kandidat für diese Zertifizierung sollte über Kenntnisse und Erfahrungen in Data Science und der Verwendung von Azure Machine Learning und Azure Databricks verfügen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Azure-Ressourcen für maschinelles Lernen; Experimente durchführen und Modelle trainieren; Bereitstellen und Operationalisieren von Lösungen für maschinelles Lernen und verantwortungsvolles maschinelles Lernen implementieren.'
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 20. Mai 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den gemessenen Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
+  </div>
+
+
+  Kandidaten für diese Prüfung sollten über Fachwissen in der Anwendung von Data Science und maschinellem Lernen verfügen, um Machine Learning-Workloads in Microsoft Azure zu implementieren und auszuführen.
+
+
+  Zu den Aufgaben dieser Rolle gehören die Planung und Erstellung einer geeigneten Arbeitsumgebung für Data Science-Workloads in Azure. Sie führen Datenexperimente durch und trainieren Vorhersagemodelle. Darüber hinaus verwalten, optimieren und implementieren sie Modelle für maschinelles Lernen in der Produktion.
+
+
+  Ein Kandidat für diese Zertifizierung sollte über Kenntnisse und Erfahrung im Bereich Data Science und im Umgang mit Azure Machine Learning und Azure Databricks verfügen.
+
+
+  Wenn Sie dieses Zertifizierungsexamen bestehen, kann dies bei einer ACE-Hochschule angerechnet werden. Weitere Informationen finden Sie unter [ACE-Leistungspunkt für Zertifizierungsprüfungen](/learn/certifications/ace-credit-for-certification-exams).
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Verwalten von Azure-Ressourcen für maschinelles Lernen, Ausführen von Experimenten und Trainieren von Modellen, Bereitstellen und Operationalisieren von ML-Lösungen und Implementieren von verantwortungsbewusstem maschinellen Lernen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjA
 practiceTestUrl: https://www.mindhub.com/p/MU-DP-100?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=DP-100&examname=Exam%20DP-100:%20Designing%20and%20Implementing%20a%20Data%20Science%20Solution%20on%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-100
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=DP-100&examname=Exam%20DP-100:%20Designing%20and%20Implementing%20a%20Data%20Science%20Solution%20on%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-100
 locales:
 - en
 - ja
@@ -30,14 +46,15 @@ locales:
 - pt-br
 - ru
 - ar-sa
+- it
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 20. Mai 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Verwaltung von Azure-Ressourcen für maschinelles Lernen- (25–30%)
-- Experimente durchführen und Modelle trainieren (20–25%)
-- Bereitstellung und Operationalisierung von Lösungen für maschinelles Lernen (35–40%)
-- verantwortliches maschinelles Lernen implementieren (5–10%)
+- The content of this exam was updated on May 20, 2021. Please download the exam skills outline below to see what changed.
+- Manage Azure resources for machine learning (25–30%)
+- Run experiments and train models (20–25%)
+- Deploy and operationalize machine learning solutions (35–40%)
+- Implement responsible machine learning (5–10%)
 roles:
 - data-scientist
 products:
@@ -60,13 +77,13 @@ resources:
 - title: Reise zur Zertifizierung
   description: Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als Azure Data Scientist Associate und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4ABJV
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://aka.ms/traincertposter
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
@@ -76,9 +93,8 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
+- title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
