--- a/learn-certs-pr/exams/md-100.yml
+++ b/learn-certs-pr/exams/md-100.yml
@@ -1,33 +1,45 @@
 ### YamlMime:Examination
-title: Windows 10
+title: Windows-Client
 metadata:
-  title: 'Exam MD-100: Windows 10'
-  description: 'Exam MD-100: Windows 10'
+  title: 'Prüfung MD-100: Windows-Client'
+  description: 'Prüfung MD-100: Windows-Client'
+  ms.openlocfilehash: a3c913d0f03d74ed77d9621b4664b7df6854e7bc
+  ms.sourcegitcommit: 96d1670f8e90d198cf2ff29d1abf056ab0bcd15c
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 12/03/2021
+  ms.locfileid: "133533413"
 uid: exam.md-100
 displayName: MD-100
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 5. August 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument mit den geprüften Fähigkeiten herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+summary: >-
+  <div><div><font color='red'><strong>Der Inhalt dieses Examens wurde am 3. Dezember 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
 
-  Kandidaten für diese Prüfung sind Administratoren, die Geräte und Client-Anwendungen in einer Unternehmensumgebung bereitstellen, konfigurieren, sichern, verwalten und überwachen. Die Kandidaten verwalten Identitäten, Zugriff, Richtlinien, Aktualisierungen und Apps.
-  
-  Als Administrator arbeiten die Kandidaten in der Regel mit dem Microsoft 365 Enterprise Administrator zusammen, um eine Gerätestrategie zu entwerfen und zu implementieren, die den Geschäftsanforderungen eines modernen Unternehmens entspricht.
-  
-  Die Kandidaten müssen mit Microsoft 365 -Workloads vertraut sein und über Kenntnisse und Erfahrung in der Bereitstellung, Konfiguration und Wartung von Windows 10 und Windows-Geräten und -Technologien verfügen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Bereitstellen von Windows; Geräte und Daten verwalten; Speicher und Konnektivität konfigurieren und Windows betreuen.'
+
+  Kandidaten dieser Prüfung sind Administratoren, die Geräte und Client-Anwendungen in einer...Unternehmens bereitstellen, konfigurieren, sichern, verwalten und überwachen. Die Kandidaten verwalten Identitäten, Zugriff, Richtlinien, Aktualisierungen und Apps.
+
+
+  Als Administrator arbeiten die Kandidaten in der Regel mit dem Microsoft 365 Enterprise Administrator zusammen, um eine Gerätestrategie zu entwerfen und zu implementieren, die den Geschäftsanforderungen eines modernen Unternehmens entspricht.
+
+
+  Die Kandidaten müssen mit Microsoft 365 -Workloads vertraut sein und über Kenntnisse und Erfahrung in der Bereitstellung, Konfiguration und Wartung von Windows-Client- und nicht unter Windows ausgeführten Geräten und Technologien verfügen.
+
+
+  Wenn Sie dieses Zertifizierungsexamen bestehen, kann dies bei einer ACE-Hochschule angerechnet werden. Weitere Informationen finden Sie unter [ACE-Leistungspunkt für Zertifizierungsprüfungen](/learn/certifications/ace-credit-for-certification-exams).
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Bereitstellen von Windows, Verwalten von Geräten und Daten, Konfigurieren von Speicher und Konnektivität sowie Warten von Windows.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVC
 practiceTestUrl: https://www.mindhub.com/md-100-windows-10-microsoft-official-practice-test/p/MU-MD-100?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MD-100&examname=Exam%20MD-100:%20Windows%2010&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmd-100
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MD-100&examname=Exam%20MD-100:%20Windows%2010&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmd-100
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 5. August 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Windows bereitstellen (15-20%)
-- Verwalten von Geräten und Daten (25-30%)
-- Konfigurieren von Speicher und Konnektivität (15-20%)
-- Wartung von Windows (30-35%)
+- The content of this exam was updated on December 3, 2021. Please download the exam skills outline below to see what changed.
+- Deploy Windows (15-20%)
+- Manage devices and data (25-30%)
+- Configure storage and connectivity (15-20%)
+- Maintain Windows (30-35%)
 roles:
 - administrator
 products:
@@ -44,7 +56,7 @@ relatedCertifications:
     uid: certification.modern-desktop
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Modern Desktop Administrator Associate.'
+  description: 'Entdecken Sie Schulungsressourcen zum Erlangen der Zertifizierung „Microsoft Certified: Modern Desktop Administrator Associate“.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45lE2
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
@@ -67,4 +79,3 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
