--- a/learn-certs-pr/exams/sc-300.yml
+++ b/learn-certs-pr/exams/sc-300.yml
@@ -1,22 +1,29 @@
 ### YamlMime:Examination
-title: 'Microsoft Identity and Access Administrator'
+title: Microsoft Identity and Access Administrator
 metadata:
-  title: 'Exam SC-300: Microsoft Identity and Access Administrator'
-  description: 'Exam SC-300: Microsoft Identity and Access Administrator'
+  title: 'Prüfung SC-300: Microsoft Identity and Access Administrator'
+  description: 'Prüfung SC-300: Microsoft Identity and Access Administrator'
+  ms.openlocfilehash: 5d9e4e847320573d121fe8c7a372af1c6c40b648
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079512"
 uid: exam.sc-300
 displayName: SC-300
-summary: |-
-  <div><div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am Freitag, 24. September 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument mit den bewerteten Fähigkeiten herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Punktzahl für einen erfolgreichen Abschluss: 700. Erfahren Sie mehr über Prüfungsergebnisse <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
+summary: >-
+  <div><div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den gemessenen Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
 
-  Der Microsoft-Identitäts- und Zugangsadministrator entwirft, implementiert und betreibt die Identitäts- und Zugriffsverwaltungssysteme eines Unternehmens mit Hilfe von Azure Active Directory (Azure AD). Sie verwalten Aufgaben wie z. B. die Bereitstellung einer sicheren Authentifizierung und des autorisierten Zugriffs auf Unternehmensanwendungen. Der Administrator bietet allen Benutzern nahtlose Benutzererfahrungen und Self-Service-Verwaltungsfunktionen. Adaptiver Zugang und Governance sind Kernelemente der Rolle. Diese Rolle ist auch für die Fehlerbehebung, Überwachung und Berichterstellung für die Identitäts- und Zugriffsumgebung verantwortlich.
-  
-  Der Identitäts- und Zugriffsadministrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen im Unternehmen zusammen, um strategische Identitätsprojekte zur Modernisierung von Identitätslösungen, zur Implementierung hybrider Identitätslösungen und zur Implementierung von Identitäts-Governance voranzutreiben.
-  
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Implementierung einer Identitätsmanagementlösung; Implementierung einer Authentifizierungs- und Zugriffsverwaltungslösung; Implementieren der Zugriffsverwaltung für Apps. und eine Identitäts-Governance-Strategie planen und umsetzen.'
+
+  Der*Die Microsoft Identity and Access Administrator entwirft, implementiert und betreibt die Systeme zur Identitäts- und Zugriffsverwaltung einer Organisation mithilfe von Azure Active Directory (Azure AD). Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen. Der*Die Administrator*in bietet nahtlose Benutzerumgebungen und Self-Service-Verwaltungsfunktionen für alle Benutzer*innen. Der adaptive Zugriff und die Governance sind Kernelemente der Rolle. Diese Rolle ist auch für die Problembehandlung, das Überwachen und die Berichterstellung für die Identitäts- und Zugriffsumgebung verantwortlich.
+
+
+  Der*Die Identity and Access Administrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen in der Organisation zusammen, um strategische Identitätsprojekte zum Modernisieren von Identitätslösungen zu fördern sowie Hybrid-Identitätslösungen und Identitätsgovernance zu implementieren.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Implementieren einer Identitätsverwaltungslösung, Implementieren einer Lösung für die Authentifizierungs- und Zugriffsverwaltung, Implementieren der Zugriffsverwaltung für Apps sowie Planen und Implementieren einer Strategie für Identitätsgovernance.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Myp5
 practiceTestUrl: https://www.mindhub.com/p/MU-SC-300?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=SC-300&examname=Exam%20SC-300:%20Microsoft%20Identity%20and%20Access%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-300
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=SC-300&examname=Exam%20SC-300:%20Microsoft%20Identity%20and%20Access%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-300
 locales:
 - en
 - ja
@@ -33,11 +40,11 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Implementieren einer Identitätsmanagementlösung (25-30%)
-- Implementieren einer Authentifizierungs- und Zugriffsverwaltungslösung (25-30%)
-- Implementieren einer Zugriffsverwaltung für Apps (10-15%)
-- Planung und Umsetzung einer Identitäts-Governance-Strategie (25-30%)
+- The content of this exam was updated on September 24, 2021. Please download the exam skills outline below to see what changed.
+- Implement an identity management solution (25-30%)
+- Implement an authentication and access management solution (25-30%)
+- Implement access management for apps (10-15%)
+- Plan and implement an identity governance strategy (25-30%)
 roles:
 - administrator
 - identity-access-admin
@@ -58,13 +65,13 @@ relatedCertifications:
 - related:
     uid: certification.identity-and-access-administrator
 resources:
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
   href: https://aka.ms/traincertposter
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
@@ -74,8 +81,8 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
+- title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
