--- a/learn-certs-pr/roles/developer.yml
+++ b/learn-certs-pr/roles/developer.yml
@@ -1,28 +1,33 @@
-### YamlMime:Role 
-title: Developer 
-metadata: 
-  title: Developer 
-  description: Developers (Entwickler) entwerfen, erstellen, testen und warten Lösungen. Developers (Entwickler) implementieren Anwendungen und Services in Zusammenarbeit mit Solution Architects (Lösungsarchitekten) und Kunden.
-uid: role.developer 
-summary: | 
-  Developers (Entwickler) entwerfen, erstellen, testen und warten Lösungen. Developers (Entwickler) implementieren Anwendungen und Services in Zusammenarbeit mit Solution Architects (Lösungsarchitekten) und Kunden. 
+### YamlMime:Role
+title: Entwickler
+metadata:
+  title: Entwickler
+  description: Developers (Entwickler) entwerfen, erstellen, testen und warten Lösungen. Developers (Entwickler) implementieren Anwendungen und Dienste in Zusammenarbeit mit Solution Architects (Lösungsarchitekten) und Kunden.
+  ms.openlocfilehash: 3e721bab06b6d102f72dc9555c2433d03e89c5b6
+  ms.sourcegitcommit: a2b584eb3752159a44885ce2df4ef8c7263255e4
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/30/2021
+  ms.locfileid: "133301834"
+uid: role.developer
+summary: "Developers (Entwickler) entwerfen, erstellen, testen und warten Lösungen. Developers (Entwickler) implementieren Anwendungen und Dienste in Zusammenarbeit mit Solution Architects (Lösungsarchitekten) und Kunden. \n"
 subTitle: Developers (Entwickler) entwerfen, erstellen, testen und warten Cloud-Lösungen.
-certificationPaths: 
-- title: Azure Developer
-  linkedInKeywords: Azure Developer
-  uid: certification-path.developer 
-  prerequisites: 
+certificationPaths:
+- title: Azure-Entwickler
+  linkedInKeywords: Azure developer
+  uid: certification-path.developer
+  prerequisites:
   - uid: certification.azure-fundamentals
     isOptional: true
     levels:
-    - beginner 
+    - beginner
   - uid: certification.azure-developer
     levels:
-    - intermediate 
+    - intermediate
 - title: Dynamics 365 Finance and Operations Apps Developer
-  linkedInKeywords: Dynamics 365 Finance and Operations Apps Developer
+  linkedInKeywords: Dynamics 365 finance and operations apps developer
   uid: certification-path.d365-finance-and-operations-apps-developer-associate
-  prerequisites: 
+  prerequisites:
   - uid: certification.d365-fundamentals-customer-engagement-apps-crm
     isOptional: true
     levels:
@@ -30,8 +35,8 @@ certificationPaths:
   - uid: certification.d365-finance-and-operations-apps-developer-associate
     levels:
     - intermediate
-- title: Microsoft 365 Developer
-  linkedInKeywords: Microsoft 365 Developer
+- title: Microsoft 365-Entwickler
+  linkedInKeywords: Microsoft 365 developer
   uid: certification-path.m365-developer-associate
   prerequisites:
   - uid: certification.microsoft-365-fundamentals
@@ -42,7 +47,7 @@ certificationPaths:
     levels:
     - intermediate
 - title: Power Platform Developer
-  linkedInKeywords: Power Platform Developer
+  linkedInKeywords: Power Platform developer
   uid: certification-path.power-platform-developer-associate
   prerequisites:
   - uid: certification.power-platform-fundamentals
@@ -69,6 +74,9 @@ certifications:
 - uid: certification.azure-iot-developer-specialty
   requiredExams:
   - uid: exam.az-220
+- uid: certification.azure-cosmos-db-developer-specialty
+  requiredExams:
+  - uid: exam.dp-420
 resources:
 - title: Microsoft Leitfaden für Schulungen und Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
